--- a/web/src/app/components/login-form/login-form.component.html
+++ b/web/src/app/components/login-form/login-form.component.html
@@ -65,6 +65,9 @@
                   placeholder="Пароль"
                   type="password"
                 />
+                <div *ngIf="signInErrorMessage" class="text-danger" role="alert">
+                  <span>Неверный логин или пароль</span>
+                </div>
               </div>
             </div>
             <div class="modal-footer">
@@ -114,6 +117,9 @@
                   placeholder="Пароль"
                   type="password"
                 />
+                <div *ngIf="registerFormErrorMessage" class="text-danger" role="alert">
+                  <span>Поля не должны быть пустыми</span>
+                </div>
               </div>
             </div>
             <div class="modal-footer">
